# hatchkit

./: README.md  pyproject.toml
my-project/.hatchkit/: AGENTS.md
src/hatchkit/: __init__.py  cli.py  gh.py  pr.py
src/hatchkit/templates/commands/: hatchkit.md  hatchkit.prfix.md
tests/: test_cli.py  test_gh.py  test_pr.py
